# anfconv

./: .gitignore  CMakeLists.txt  LICENSE  README  anfconvConfig.cmake.in
espresso/: CMakeLists.txt
espresso/main/: espresso.h
src/: CMakeLists.txt  GitSHA1.h  anf.cpp  anf.h  clauses.h  cnf.cpp  cnf.h  configdata.h  conv.cpp  eqandname.h  evaluator.h  gaussjordan.h  iterativeSolver.cpp  iterativeSolver.h  karnaugh.cpp  karnaugh.h  main.cpp  replacer.cpp  replacer.h  satsolve.cpp  satsolve.h  simplifybysat.cpp  simplifybysat.h  testpolybori.cpp  testpolybori.h  time_mem.h  types.h  xlsimplifier.cpp  xlsimplifier.h
test/: CMakeLists.txt  testpolybori.cpp
